feat(presentation): add splash screen
Add splash screen dependency.
Add splash screen themes.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,8 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.6.1'
+    //Splash Screen
+    implementation 'androidx.core:core-splashscreen:1.0.0'
 
     // Circle Tab Indicator
     implementation "me.relex:circleindicator:$circle_indicator"
