--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -8,13 +8,44 @@ on:
     - cron: "30 1 * * 0"
 
 jobs:
-  codeql:
-    name: 🏭 Scanning
-    runs-on: ubuntu-latest
+  analyze:
+    name: 📈 Analyze
+    runs-on: windows-latest
+
+    permissions:
+      actions: read
+      contents: read
+      security-events: write
+
+    strategy:
+      fail-fast: false
+      matrix:
+        language: [ 'java' ]
+
     steps:
       - name: ⤵️ Check out code from GitHub
-        uses: actions/checkout@v2
-      - name: 🏗 Initialize CodeQL
-        uses: github/codeql-action/init@v1
+        uses: actions/checkout@v3
+
+      - name: 🧰 Initialize CodeQL
+        uses: github/codeql-action/init@v2
+        with:
+          languages: ${{ matrix.language }}
+
+      - name: 🔧 Set up JDK 11
+        uses: actions/setup-java@v3
+        with:
+          java-version: '11'
+          distribution: 'adopt'
+
+      - name: ⚙️ Validate Gradle Wrapper
+        uses: gradle/wrapper-validation-action@v1.0.4
+
+      - name: 🔨 Build with Gradle
+        uses: gradle/gradle-build-action@v2.3.1
+        with:
+          arguments: build
+
       - name: 🚀 Perform CodeQL Analysis
-        uses: github/codeql-action/analyze@v1
+        uses: github/codeql-action/analyze@v2
+        with:
+          category: "/language:${{matrix.language}}"
