--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,24 +34,23 @@ android {
 }
 
 dependencies {
-
     def circle_indicator = "2.1.6"
     def nav_version = "2.5.2"
     def hilt_version = "2.44"
 
+    // Module implementation
+    implementation project(path: ':domain')
+    implementation project(path: ':data')
+
+    // Android implementations
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.6.1'
-    //Splash Screen
-    implementation 'androidx.core:core-splashscreen:1.0.0'
-
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.core:core-splashscreen:1.0.0' //Splash Screen
 
     // Hilt implementation
     implementation "com.google.dagger:hilt-android:$hilt_version"
     annotationProcessor "com.google.dagger:hilt-compiler:$hilt_version"
-
-    // Module implementation
-    implementation project(path: ':domain')
-    implementation project(path: ':data')
 
     // Circle Tab Indicator
     implementation "me.relex:circleindicator:$circle_indicator"
@@ -59,23 +58,21 @@ dependencies {
     // Navigation Components
     implementation "androidx.navigation:navigation-fragment:$nav_version"
     implementation "androidx.navigation:navigation-ui:$nav_version"
-    // Feature module Support
-    implementation "androidx.navigation:navigation-dynamic-features-fragment:$nav_version"
+    implementation "androidx.navigation:navigation-dynamic-features-fragment:$nav_version" // Feature module Support
 
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+
+    /* ------------------------------------------ Test ------------------------------------------ */
 
     testImplementation 'junit:junit:4.13.2'
-    // Testing Navigation
-
-
-    // For local unit tests
-    testImplementation "com.google.dagger:hilt-android-testing:$hilt_version"
-    testAnnotationProcessor "com.google.dagger:hilt-compiler:$hilt_version"
-
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     androidTestImplementation "androidx.navigation:navigation-testing:$nav_version" // Navigation
-    // Testing Hilt
+
+    // Hilt Test
+    // For local unit tests
+    testImplementation "com.google.dagger:hilt-android-testing:$hilt_version"
+    testAnnotationProcessor "com.google.dagger:hilt-compiler:$hilt_version"
+    // For instrumentation tests
     androidTestImplementation  "com.google.dagger:hilt-android-testing:$hilt_version"
     androidTestAnnotationProcessor "com.google.dagger:hilt-compiler:$hilt_version"
 
