--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -9,5 +9,8 @@ java {
 dependencies {
 
     implementation 'org.jetbrains:annotations:23.0.0'
+
+    /* ------------------------------------------ Test ------------------------------------------ */
+
     testImplementation 'junit:junit:4.13.2'
 }
