--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,27 +34,35 @@ android {
 }
 
 dependencies {
-    def circle_indicator = "2.1.6"
-    def nav_version = "2.5.2"
+
     def hilt_version = "2.44"
+    def lifecycle_version = "2.6.0-alpha02"
+    def nav_version = "2.5.2"
+    def fragment_version = "1.5.3"
 
     // Module implementation
     implementation project(path: ':domain')
     implementation project(path: ':data')
 
-    // Android implementations
+    /* ---- Android implementations ---- */
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.core:core-splashscreen:1.0.0' //Splash Screen
+    //Splash Screen
+    implementation 'androidx.core:core-splashscreen:1.0.0'
+    // Circle Tab Indicator
+    implementation 'me.relex:circleindicator:2.1.6'
 
-    // Hilt implementation
+    /* ---- Architecture Components ---- */
+    // Hilt
     implementation "com.google.dagger:hilt-android:$hilt_version"
     annotationProcessor "com.google.dagger:hilt-compiler:$hilt_version"
-
-    // Circle Tab Indicator
-    implementation "me.relex:circleindicator:$circle_indicator"
-
+    // ViewModel
+    implementation "androidx.lifecycle:lifecycle-viewmodel:$lifecycle_version"
+    // LiveData
+    implementation "androidx.lifecycle:lifecycle-livedata:$lifecycle_version"
+    // Fragment
+    implementation "androidx.fragment:fragment:$fragment_version"
     // Navigation Components
     implementation "androidx.navigation:navigation-fragment:$nav_version"
     implementation "androidx.navigation:navigation-ui:$nav_version"
@@ -66,14 +74,15 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    androidTestImplementation "androidx.navigation:navigation-testing:$nav_version" // Navigation
 
-    // Hilt Test
-    // For local unit tests
+    /* ---- Architecture Components ---- */
+    // Hilt For local unit tests
     testImplementation "com.google.dagger:hilt-android-testing:$hilt_version"
     testAnnotationProcessor "com.google.dagger:hilt-compiler:$hilt_version"
-    // For instrumentation tests
+    // Hilt For instrumentation tests
     androidTestImplementation  "com.google.dagger:hilt-android-testing:$hilt_version"
     androidTestAnnotationProcessor "com.google.dagger:hilt-compiler:$hilt_version"
+    // Navigation Test
+    androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"
 
 }
