build(gradle): update dependencies

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,18 +35,18 @@ android {
 
 dependencies {
 
-    def hilt_version = "2.44"
-    def lifecycle_version = "2.6.0-alpha02"
-    def nav_version = "2.5.2"
-    def fragment_version = "1.5.3"
+    def hilt_version = "2.44.2"
+    def lifecycle_version = "2.6.0-alpha04"
+    def nav_version = "2.5.3"
+    def fragment_version = "1.5.5"
 
     // Module implementation
     implementation project(path: ':domain')
     implementation project(path: ':data')
 
     /* ---- Android implementations ---- */
-    implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'androidx.appcompat:appcompat:1.6.0'
+    implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     //Splash Screen
     implementation 'androidx.core:core-splashscreen:1.0.0'
@@ -58,6 +58,7 @@ dependencies {
     implementation "com.google.dagger:hilt-android:$hilt_version"
     annotationProcessor "com.google.dagger:hilt-compiler:$hilt_version"
     // ViewModel
+    //noinspection GradleDependency
     implementation "androidx.lifecycle:lifecycle-viewmodel:$lifecycle_version"
     // LiveData
     implementation "androidx.lifecycle:lifecycle-livedata:$lifecycle_version"
@@ -72,8 +73,8 @@ dependencies {
     /* ------------------------------------------ Test ------------------------------------------ */
 
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
     /* ---- Architecture Components ---- */
     // Hilt For local unit tests
