--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ android {
         debug {
             minifyEnabled false
             signingConfig signingConfigs.debug
+            applicationIdSuffix '.debug'
         }
     }
     compileOptions {
