--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,6 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         proguardFiles getDefaultProguardFile('proguard-android.txt')
-        signingConfig signingConfigs.debug
     }
 
     buildFeatures {
@@ -28,11 +27,6 @@ android {
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
-        debug {
-            minifyEnabled false
-            signingConfig signingConfigs.debug
-            applicationIdSuffix '.debug'
-        }
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -41,9 +35,11 @@ android {
 }
 
 dependencies {
-
     def hilt_version = "2.45"
     def lifecycle_version = "2.6.0-alpha04"
+    def retrofit_version = "2.9.0"
+    def rxjava_version="3.1.6"
+    def rxandroid_version="3.0.2"
     def nav_version = "2.5.3"
     def fragment_version = "1.5.5"
 
@@ -59,6 +55,16 @@ dependencies {
     implementation 'androidx.core:core-splashscreen:1.0.0'
     // Circle Tab Indicator
     implementation 'me.relex:circleindicator:2.1.6'
+    
+    /* ----- Third party Libraries ----- */
+    // RxJava
+    implementation "io.reactivex.rxjava3:rxjava:$rxjava_version"
+    implementation "io.reactivex.rxjava3:rxandroid:$rxandroid_version"
+    // Retrofit
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:adapter-rxjava3:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+
 
     /* ---- Architecture Components ---- */
     // Hilt
