--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -8,7 +8,11 @@ java {
 }
 dependencies {
 
+    def rxjava_version="3.1.6"
     implementation 'org.jetbrains:annotations:24.0.0'
+
+    // RxJava
+    implementation "io.reactivex.rxjava3:rxjava:$rxjava_version"
 
     /* ------------------------------------------ Test ------------------------------------------ */
 
