--- a/data/build.gradle
+++ b/data/build.gradle
@@ -1,33 +1,15 @@
 plugins {
-    id 'com.android.library'
+    id 'java-library'
 }
 
-android {
-    namespace 'com.hxl.data'
-    compileSdk 33
-
-    defaultConfig {
-        minSdk 21
-        targetSdk 33
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        consumerProguardFiles "consumer-rules.pro"
-    }
-
-    buildTypes {
-        release {
-            minifyEnabled true
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
+java {
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
 }
-
 dependencies {
     def rxjava_version="3.1.6"
+
+    implementation 'org.jetbrains:annotations:24.0.0'
 
     // Module implementation
     implementation project(path: ':domain')
@@ -35,8 +17,6 @@ dependencies {
     // RxJava
     implementation "io.reactivex.rxjava3:rxjava:$rxjava_version"
 
-    /* ------------------------------------------ Test ------------------------------------------ */
+    // Test
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
