--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -9,12 +9,12 @@ java {
 dependencies {
 
     def rxjava_version="3.1.6"
+
     implementation 'org.jetbrains:annotations:24.0.0'
 
     // RxJava
     implementation "io.reactivex.rxjava3:rxjava:$rxjava_version"
 
-    /* ------------------------------------------ Test ------------------------------------------ */
-
+    // Test
     testImplementation 'junit:junit:4.13.2'
 }
