ci(labels): update github labeler action

--- a/.github/workflows/labels.yml
+++ b/.github/workflows/labels.yml
@@ -4,7 +4,8 @@ name: Sync labels
 on:
   push:
     branches:
-      - main
+      - master
+      - develop
     paths:
       - .github/labels.yml
 
